src/test/deca/context/valid/created/sans_objet/affectation_int_3.deca
// Description:
//    Programme minimaliste utilisant int.
//
// Resultats:
//  
//
// Historique:
//    cree le 01/01/2024

{
        int x ;
        x=-10;
}