src/test/deca/context/invalid/created/sans_objet/affectation_int_4.deca
// Description:
//    Programme minimaliste utilisant int.
//
// Resultats:
//   erreur: ligne 12 : invalid assign
//
// Historique:
//    cree le 01/01/2024

{
        int x ;
        x= "test";
}